build_errors_v6.txt
install
+- install nyon_game
   +- compile exe nyon_game Debug native 6 errors
src\raylib_stub.zig:163:11: error: duplicate struct member name 'CameraProjection'
pub const CameraProjection = enum(raylib_c_int) {
          ^~~~~~~~~~~~~~~~
src\raylib_stub.zig:964:11: note: duplicate name here
pub const CameraProjection = enum(i32) {
          ^~~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:293:11: error: duplicate struct member name 'KeyboardKey'
pub const KeyboardKey = enum(raylib_c_int) {
          ^~~~~~~~~~~
src\raylib_stub.zig:944:11: note: duplicate name here
pub const KeyboardKey = enum(i32) {
          ^~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:399:11: error: duplicate struct member name 'ConfigFlags'
pub const ConfigFlags = packed struct(u16) {
          ^~~~~~~~~~~
src\raylib_stub.zig:927:11: note: duplicate name here
pub const ConfigFlags = extern struct {
          ^~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:449:8: error: duplicate struct member name 'setConfigFlags'
pub fn setConfigFlags(flags: ConfigFlags) void {
       ^~~~~~~~~~~~~~
src\raylib_stub.zig:969:8: note: duplicate name here
pub fn setConfigFlags(flags: ConfigFlags) void {
       ^~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:482:8: error: duplicate struct member name 'getWindowScaleDPI'
pub fn getWindowScaleDPI() Vector2 {
       ^~~~~~~~~~~~~~~~~
src\raylib_stub.zig:973:8: note: duplicate name here
pub fn getWindowScaleDPI() Vector2 {
       ^~~~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:713:8: error: duplicate struct member name 'loadFileText'
pub fn loadFileText(fileName: [:0]const u8) ?[*:0]u8 {
       ^~~~~~~~~~~~
src\raylib_stub.zig:977:8: note: duplicate name here
pub fn loadFileText(fileName: [*:0]const u8) ?[*:0]u8 {
       ^~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error: 6 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\main.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep sysgpu --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -ODebug "-Msysgpu=C:\\Users\\donald\\nyon-game\\src\\vendor\\sysgpu\\main.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_game --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\lib\\" --listen=-

install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 6 errors
src\raylib_stub.zig:163:11: error: duplicate struct member name 'CameraProjection'
pub const CameraProjection = enum(raylib_c_int) {
          ^~~~~~~~~~~~~~~~
src\raylib_stub.zig:964:11: note: duplicate name here
pub const CameraProjection = enum(i32) {
          ^~~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:293:11: error: duplicate struct member name 'KeyboardKey'
pub const KeyboardKey = enum(raylib_c_int) {
          ^~~~~~~~~~~
src\raylib_stub.zig:944:11: note: duplicate name here
pub const KeyboardKey = enum(i32) {
          ^~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:399:11: error: duplicate struct member name 'ConfigFlags'
pub const ConfigFlags = packed struct(u16) {
          ^~~~~~~~~~~
src\raylib_stub.zig:927:11: note: duplicate name here
pub const ConfigFlags = extern struct {
          ^~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:449:8: error: duplicate struct member name 'setConfigFlags'
pub fn setConfigFlags(flags: ConfigFlags) void {
       ^~~~~~~~~~~~~~
src\raylib_stub.zig:969:8: note: duplicate name here
pub fn setConfigFlags(flags: ConfigFlags) void {
       ^~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:482:8: error: duplicate struct member name 'getWindowScaleDPI'
pub fn getWindowScaleDPI() Vector2 {
       ^~~~~~~~~~~~~~~~~
src\raylib_stub.zig:973:8: note: duplicate name here
pub fn getWindowScaleDPI() Vector2 {
       ^~~~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:713:8: error: duplicate struct member name 'loadFileText'
pub fn loadFileText(fileName: [:0]const u8) ?[*:0]u8 {
       ^~~~~~~~~~~~
src\raylib_stub.zig:977:8: note: duplicate name here
pub fn loadFileText(fileName: [*:0]const u8) ?[*:0]u8 {
       ^~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error: 6 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep sysgpu --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -ODebug "-Msysgpu=C:\\Users\\donald\\nyon-game\\src\\vendor\\sysgpu\\main.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\lib\\" --listen=-

Build Summary: 0/5 steps succeeded (2 failed)
install transitive failure
+- install nyon_game transitive failure
|  +- compile exe nyon_game Debug native 6 errors
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 6 errors

error: the following build command failed with exit code 1:
.zig-cache\o\19780eee83ff7dbd4a759dee82a00389\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2040+c475f1fcd\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2040+c475f1fcd\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0x1cc6e51e -Z3d73c06dc3ed5a37
